--- a/staff/ara-manjon/initial-app/components/panel.sass
+++ b/staff/ara-manjon/initial-app/components/panel.sass
@@ -5,7 +5,9 @@
     
     background-color: #0f0f0f
     
-    height: 30vh
+    height: 20vh
+
+    min-width: 100px
 
 
 %text-link
@@ -17,14 +19,11 @@
 
     line-height: 50px
 
-    weight: 500
+    font-weight: 500
 
     font-size: 1.5rem
 
-    margin: 10px
-
     text-align: center 
-
     &:hover
         color: $color-link-hover
 
@@ -37,38 +36,12 @@
 
     font-weight: 200
 
-    line-height: 100px
+    line-height: 30px
 
     margin: 10px
 
     text-align: center 
 
-
-
-body
-    margin: 0
-
-    padding: 0
-
-    width: 100vw
-    h1
-        text-align: center
-
-        font-family: 'Open Sans', Helvetica, sans-serif
-
-        font-weight: 500
-
-        writing-mode: vertical-lr
-
-        transform: rotate(180deg)
-
-        font-size: 2rem
-
-        color: #2b2b2b
-
-        padding: 10px
-
-        line-height: 0px
 
             
 
