start working on style

--- a/staff/manuel-galvez/initial-app/duck-app/style/base-settings.sass
+++ b/staff/manuel-galvez/initial-app/duck-app/style/base-settings.sass
@@ -1,5 +1,5 @@
 $panel-color: gray
-$panel-back-color: lightgray
+$panel-back-color: white
     
 $alert-color: skyblue
 $alert-back-color: rgba(135, 206, 235, 0.4)
