--- a/staff/manuel-galvez/initial-app/duck-app/style/index.css
+++ b/staff/manuel-galvez/initial-app/duck-app/style/index.css
@@ -11,8 +11,56 @@
   margin: 1.5rem;
   border: 0.1rem solid gray;
   border-radius: 1rem;
-  background-color: lightgray;
+  background-color: white;
 }
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 3rem;
+  max-width: 15rem;
+  margin: 1vh 0;
+  text-decoration: none;
+  border-radius: 3px;
+}
+.btn--blue {
+  background-color: #0791D0;
+  color: white;
+}
+.btn--white {
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+.btn__register {
+  background-color: #0791D0;
+  color: white;
+}
+.btn__login {
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+.btn__submit {
+  background-color: #0791D0;
+  color: white;
+  box-shadow: 0;
+  border: 0;
+  align-self: center;
+  font-size: 1.05rem;
+}
+.btn__back {
+  width: 7rem;
+  max-height: 2.5rem;
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+.btn__logout {
+  width: 7rem;
+  height: 2.5rem;
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+
 .landing {
   background-color: yellow;
 }
