--- a/staff/jorge-rodri/initial-app/style/base-settings.sass
+++ b/staff/jorge-rodri/initial-app/style/base-settings.sass
@@ -12,3 +12,7 @@ $alert-warn-back-color: rgba(255, 99, 71, 0.283)
 $confirm-color: plum
 $confirm-back-color: #ffcccc
 $confirm-title-color: violet
+
+$moz: 3px 3px 5px 6px #ccc
+$web: 3px 3px 5px 6px #ccc
+$sha: 3px 3px 5px 6px #ccc
