initial-app final

--- a/staff/ara-manjon/initial-app/components/custom/duck-results.sass
+++ b/staff/ara-manjon/initial-app/components/custom/duck-results.sass
@@ -1,7 +1,7 @@
 .duck-results
-    @extend %base-panel
-    @extend %text-link
+    @extend %panel
 
+    background-color: skyblue
 
     img
         width: 333px
