--- a/staff/ara-manjon/initial-app/components/panel.sass
+++ b/staff/ara-manjon/initial-app/components/panel.sass
@@ -1,50 +1,11 @@
-%base-panel
+%panel
     padding: 0.5rem
+    margin: 1.5rem
 
-    +round-border(0.01rem, 0.1rem, solid, #0f0f0f)
+    +round-border(0.1rem, 1rem, solid, $panel-color)
     
-    background-color: #0f0f0f
-    
-    height: 20vh
+    background-color: $panel-back-color
 
-    min-width: 100px
+    &__feedback
+        color: red
 
-
-%text-link
-    color: #fbff00
-
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif
-
-    text-decoration: none
-
-    line-height: 50px
-
-    font-weight: 500
-
-    font-size: 1.5rem
-
-    text-align: center 
-    &:hover
-        color: $color-link-hover
-
-%letters
-    color: #ffffff
-
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif
-
-    font-size: 1rem
-
-    font-weight: 200
-
-    line-height: 30px
-
-    margin: 10px
-
-    text-align: center 
-
-
-            
-
-            
-
-    
