--- a/staff/ara-manjon/initial-app/style/base-settings.sass
+++ b/staff/ara-manjon/initial-app/style/base-settings.sass
@@ -1,8 +1,14 @@
-$panel-color-yellow: rgba(255, 246, 166, 0.5)
-$panel-back-color-yellow: rgba(255, 246, 166, 0.5)
-
-$panel-back-color-button-yellow: rgba(255,255,255, 0.3)
-$text-color: #2b2b2b
+$panel-color: gray
+$panel-back-color: lightgray
     
-$color-link-hover: rgba(251, 255, 0, 0.8)
+$alert-color: skyblue
+$alert-back-color: rgba(135, 206, 235, 0.4)
+$alert-title-color: rgb(0, 115, 255)
 
+$alert-warn-color: tomato
+$alert-warn-title-color: rgb(255, 65, 31)
+$alert-warn-back-color: rgba(255, 99, 71, 0.283)
+
+$confirm-color: plum
+$confirm-back-color: #ffcccc
+$confirm-title-color: violet
