--- a/staff/ara-manjon/initial-app/style/index.css
+++ b/staff/ara-manjon/initial-app/style/index.css
@@ -1,57 +1,3 @@
-.duck-detail__photo {
-  width: 333px;
-}
-.duck-detail__price {
-  background-color: yellow;
-  color: red;
-}
-
-.duck-results img {
-  width: 333px;
-}
-
-.landing,
-.register,
-.register-success,
-.submit-back,
-.login,
-.search, .duck-detail, .duck-home, .duck-results {
-  padding: 0.5rem;
-  border: 0.01rem solid #0f0f0f;
-  border-radius: 0.1rem;
-  background-color: #0f0f0f;
-  height: 20vh;
-  min-width: 100px;
-}
-
-.but, .duck-detail, .duck-home, .duck-results {
-  color: #fbff00;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  line-height: 50px;
-  font-weight: 500;
-  font-size: 1.5rem;
-  text-align: center;
-}
-.but:hover, .duck-detail:hover, .duck-home:hover, .duck-results:hover {
-  color: rgba(251, 255, 0, 0.8);
-}
-
-.landing label,
-.register label,
-.register-success label,
-.submit-back label,
-.login label,
-.search label {
-  color: #ffffff;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 1rem;
-  font-weight: 200;
-  line-height: 30px;
-  margin: 10px;
-  text-align: center;
-}
-
 .show {
   display: block;
 }
@@ -60,76 +6,64 @@
   display: none;
 }
 
-.background {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
+.duck-detail, .duck-results, .duck-home, .search, .feedback, .register-success, .register, .login, .landing {
+  padding: 0.5rem;
+  margin: 1.5rem;
+  border: 0.1rem solid gray;
+  border-radius: 1rem;
+  background-color: lightgray;
 }
-.background h1 {
-  text-align: center;
-  font-family: "Open Sans", Helvetica, sans-serif;
-  font-weight: 500;
-  writing-mode: vertical-lr;
-  transform: rotate(180deg);
-  font-size: 2rem;
-  color: #2b2b2b;
-  padding: 10px;
-  line-height: 0px;
+.landing {
+  background-color: yellow;
 }
 
-.landing,
-.register,
-.register-success,
-.submit-back,
-.login,
+.login {
+  background-color: orange;
+}
+
+.register {
+  background-color: gold;
+}
+
+.register-success {
+  background-color: salmon;
+}
+
+.feedback--success {
+  background-color: greenyellow;
+}
+.feedback--warning {
+  background-color: yellow;
+}
+.feedback--error {
+  background-color: red;
+  color: white;
+}
+
 .search {
-  text-align: center;
-}
-.landing label,
-.register label,
-.register-success label,
-.submit-back label,
-.login label,
-.search label {
-  top: 2px;
-  text-align: center;
+  background-color: silver;
 }
 
-.but {
-  display: inline-block;
-  appearance: none;
-  border: none;
-  margin: 0;
-  height: 0;
-  padding: 0;
-  cursor: pointer;
-  transition: all 250ms cubic-bezier(0.675, 0.42, 0.09, 0.87);
-}
-.but:not([disabled]):hover, .but:not([disabled]):focus {
-  color: rgba(251, 255, 0, 0.8);
-}
-.but:focus {
-  outline: none;
-  box-shadow: none;
-}
-.but[disabled] {
-  cursor: not-allowed;
+.duck-home {
+  background-color: greenyellow;
 }
 
-.feedback {
+.duck-results {
+  background-color: skyblue;
+}
+.duck-results img {
+  width: 333px;
+}
+
+.duck-detail {
+  background-color: plum;
+}
+.duck-detail__photo {
+  width: 333px;
+}
+.duck-detail__price {
+  background-color: yellow;
   color: red;
-  font-family: "Open Sans", Arial, Helvetica, sans-serif;
-  font-size: 0.8rem;
-  font-weight: 200;
-  line-height: 15px;
-  margin: 1px;
-  text-align: center;
-  background-color: none;
-  padding: 1px;
-}
-
-.back {
-  background-color: white;
 }
 
 /*# sourceMappingURL=index.css.map */
