--- a/staff/oihane-unciti/mucho-layout/all-sass/style.sass
+++ b/staff/oihane-unciti/mucho-layout/all-sass/style.sass
@@ -64,10 +64,12 @@ body
     flex-direction: column
     margin-bottom: 10px
     
+    
     &__information
         width: 100%
         background-color: $bkc
         border: 1px solid white
+        min-height: 400px
 
 .img
     width: 100%
@@ -213,6 +215,8 @@ body
         grid-row-start: 4
         grid-row-end: 6
         
+    
+    
     .article__information
         width: 33.1%
         
