--- a/staff/adria-arquimbau/e-duck/2/style/index.css
+++ b/staff/adria-arquimbau/e-duck/2/style/index.css
@@ -1,57 +1,11 @@
-* {
-  margin: 10px;
-  padding: 10px;
+.feedback--error {
+  color: red;
 }
-
-body {
-  background-color: red;
-}
-
-div {
-  background-color: green;
-  border-radius: 15px;
-  border: 20px solid skyblue;
-}
-
-button {
+.feedback--warn {
   background-color: yellow;
-  border-radius: 10px;
-  border: 8px solid black;
 }
-
-a {
-  background-color: yellow;
-  border-radius: 10px;
-  border: 8px solid black;
-  margin: 10px;
-}
-
-li {
-  padding: 30px;
-  border-radius: 10px;
-  border: 8px solid black;
-  background-color: blue;
-}
-
-img {
-  width: 300px;
-  height: 300px;
-  border-radius: 10px;
-  border: 8px solid red;
-  background-color: pink;
-}
-
-input {
-  border: 8px solid black;
-  background-color: skyblue;
-  border-radius: 30px;
-}
-
-h1 {
-  border: 8px solid black;
-  background-color: red;
-  border-radius: 30px;
-  border: 8px solid yellow;
+.feedback--success {
+  color: green;
 }
 
 /*# sourceMappingURL=index.css.map */
