--- a/staff/adria-arquimbau/e-duck/4/style/index.css
+++ b/staff/adria-arquimbau/e-duck/4/style/index.css
@@ -4,11 +4,6 @@
   margin: 10px;
 }
 
-img {
-  width: 250px;
-  height: 250px;
-}
-
 .feedback--error {
   color: red;
 }
@@ -17,6 +12,20 @@ img {
 }
 .feedback--success {
   color: green;
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(10, 10, 10, 0.3);
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.modal > main {
+  background-color: white;
+  text-align: center;
 }
 
 /*# sourceMappingURL=index.css.map */
