--- a/staff/adria-arquimbau/mucho-layout/with-BEM/input.sass
+++ b/staff/adria-arquimbau/mucho-layout/with-BEM/input.sass
@@ -19,20 +19,20 @@ body
         display: flex
         justify-content: space-between
 
-    &__logo
-        margin: 0
-        padding: 0
-        max-width: 90px
+.header-main__logo
+    margin: 0
+    padding: 0
+    max-width: 90px
 
-    &__text
-        display: none
+.header-main__text
+    display: none
 
-    &__menu--icon
-        align-self: center
-        max-width: 40px
+.header-main-nav__icon
+    align-self: center
+    max-width: 40px
 
-    &__menu--hidden
-        display: none
+.header-main-nav__menu--hidden
+    display: none
 
     &__submenu
         display: flex
@@ -254,10 +254,10 @@ body
 
     .footer
 
-        &__text
+    .footer__text
         width: 50%
 
-        &__city--branch
+    .footer__city--branch      
         width: auto
         height: 200px
 
