--- a/staff/adria-arquimbau/mucho-layout/with-BEM/output.css
+++ b/staff/adria-arquimbau/mucho-layout/with-BEM/output.css
@@ -20,36 +20,40 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.header__logo {
+
+.header-main__logo {
   margin: 0;
   padding: 0;
   max-width: 90px;
 }
-.header__text {
+
+.header-main__text {
   display: none;
 }
-.header__menu--icon {
+
+.header-main-nav__icon {
   align-self: center;
   max-width: 40px;
 }
-.header__menu--hidden {
+
+.header-main-nav__menu--hidden {
   display: none;
 }
-.header__submenu {
+.header-main-nav__menu--hidden__submenu {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid darkgray;
 }
-.header__submenu--text {
+.header-main-nav__menu--hidden__submenu--text {
   margin-left: 0;
 }
-.header__submenu--icon {
+.header-main-nav__menu--hidden__submenu--icon {
   width: 25px;
   height: 25px;
   margin-right: 7px;
   align-self: center;
 }
-.header__submenu--hidden {
+.header-main-nav__menu--hidden__submenu--hidden {
   display: none;
 }
 
@@ -249,11 +253,15 @@ body {
     min-height: auto;
   }
 
-  .footer {
+  .footer__text {
     width: 50%;
+  }
+
+  .footer__city--branch {
     width: auto;
     height: 200px;
   }
+
   .img3 {
     grid-row: span 2;
     grid-column: span 2;
