--- a/staff/jaume-villarreal/initial-app/style/base-settings.sass
+++ b/staff/jaume-villarreal/initial-app/style/base-settings.sass
@@ -27,6 +27,10 @@ body
     flex: display
     flex-direction: column
     justify-content: center
+    border-radius: .5rem
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(158,149,158,1)
+    -moz-box-shadow: 0px 0px 5px 0px rgba(158,149,158,1)
+    box-shadow: 0px 0px 5px 0px rgba(158,149,158,1)
 
 h1
     text-align: center
