--- a/staff/jaume-villarreal/initial-app/style/index.css
+++ b/staff/jaume-villarreal/initial-app/style/index.css
@@ -14,6 +14,10 @@ body {
   flex: display;
   flex-direction: column;
   justify-content: center;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0px 0px 5px 0px #9e959e;
+  -moz-box-shadow: 0px 0px 5px 0px #9e959e;
+  box-shadow: 0px 0px 5px 0px #9e959e;
 }
 
 h1 {
