initial app update

--- a/staff/ara-manjon/initial-app/components/custom/duck-detail.sass
+++ b/staff/ara-manjon/initial-app/components/custom/duck-detail.sass
@@ -1,11 +1,10 @@
 .duck-detail
     @extend %panel
 
-    background-color: plum
+    background-color: #cbd6ce
 
     &__photo
         width: 333px
 
     &__price
-        background-color: yellow
-        color: red
+        color: black
