--- a/staff/groups/le-sky-martini-inc/memefy/style/index.css
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid black;
+  border: 1px dotted deeppink;
   padding: 10px;
   margin: 10px;
 }
@@ -12,6 +12,20 @@
 }
 .feedback--success {
   color: green;
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(10, 10, 10, 0.3);
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+.modal > main {
+  background-color: white;
+  text-align: center;
 }
 
 /*# sourceMappingURL=index.css.map */
