--- a/staff/groups/skynews-sa/0/style/index.css
+++ b/staff/groups/skynews-sa/0/style/index.css
@@ -66,3 +66,36 @@ select {
 }
 
 /*# sourceMappingURL=index.css.map */
+
+
+
+
+
+
+
+
+.spinner:before{
+  content:"";
+  box-sizing: border-box;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  height: 80px;
+  width: 80px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border-top:10px solid #009ee2;
+  border-right:7px solid transparent;
+  animation:spinner 0.4s linear infinite;
+}
+@keyframes spinner{
+  to{
+    transform: rotate(360deg);
+  }
+}
+.fa-star{
+  background-color: transparent;
+  color: #888888;
+  background: none;
+}
