update feedback component with styles

--- a/staff/groups/over-cook-sa/overcooked/style/index.css
+++ b/staff/groups/over-cook-sa/overcooked/style/index.css
@@ -4,4 +4,14 @@
   margin: 10px;
 }
 
+.feedback--error {
+  color: red;
+}
+.feedback--warn {
+  background-color: yellow;
+}
+.feedback--success {
+  color: green;
+}
+
 /*# sourceMappingURL=index.css.map */
