--- a/staff/groups/le-sky-martini-inc/memefy/style/index.sass
+++ b/staff/groups/le-sky-martini-inc/memefy/style/index.sass
@@ -1,8 +1,14 @@
-*
-    border: 1px solid black
-    padding: 10px
-    margin: 10px
-
+* 
+    margin: 0
+    
+@import base-settings
+@import ../components/landing
+@import ../components/login
+@import ../components/register
+@import ../components/register-success
+@import ../components/register-or-login
 @import ../components/feedback
+@import ../components/search
+@import ../components/results
+@import ../components/gif-detail
 @import ../components/modal
-
