first version grid and flex results

--- a/staff/groups/alf-&-co/app/components/movie-item/index.sass
+++ b/staff/groups/alf-&-co/app/components/movie-item/index.sass
@@ -1,5 +1,9 @@
 .mosaic
-    width: 95vw
-    height: 100vw
+    width: 97%
+    height: 93%
     object-fit: cover
-    grid-gap: 10px
+    
+.mosaicFooter
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-around
