--- a/staff/groups/alf-&-co/app/components/movie-item/index.css
+++ b/staff/groups/alf-&-co/app/components/movie-item/index.css
@@ -1,8 +1,13 @@
 .mosaic {
-  width: 95vw;
-  height: 100vw;
+  width: 97%;
+  height: 93%;
   object-fit: cover;
-  grid-gap: 10px;
+}
+
+.mosaicFooter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 /*# sourceMappingURL=index.css.map */
