--- a/staff/groups/alf-&-co/app/style/index.css
+++ b/staff/groups/alf-&-co/app/style/index.css
@@ -12,15 +12,25 @@
 
 .mosaicPanel {
   display: grid;
-  grid-template-rows: repeat(15, 1fr);
+  grid-template-rows: repeat(20, 1fr);
   grid-gap: 1px;
   padding-left: 3px;
 }
 
+.mosaicList {
+  grid-gap: 5px;
+}
+
 .mosaic {
-  width: 95vw;
-  height: 100vw;
+  width: 97%;
+  height: 93%;
   object-fit: cover;
+}
+
+.mosaicFooter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .button, .feedback--error, .feedback--success {
