update layout landing and validations

--- a/staff/groups/alf-&-co/app/style/base-setting.sass
+++ b/staff/groups/alf-&-co/app/style/base-setting.sass
@@ -5,3 +5,4 @@ $color-grey: #545759
 $color-light-grey: #c6c6c6
 $font-fam: 'Open Sans', Arial, Helvetica, sans-serif
 $color-black: #000000
+$color-beige: #f7f7f7
