--- a/staff/groups/alf-&-co/app/style/index.css
+++ b/staff/groups/alf-&-co/app/style/index.css
@@ -34,16 +34,23 @@
 }
 
 .button, .feedback--error, .feedback--success {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
   text-decoration: none;
   font-weight: 200;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
-form input, form, .big-letter, .registered-name {
-  font-size: 0.8rem;
+.registered-name, .container_image p, form input, form, .big-letter, .menuToggle a, .search-bar {
+  font-size: 1rem;
   text-decoration: none;
   font-weight: 200;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+}
+
+.container_image .title_collection {
+  font-size: 1.3rem;
+  text-decoration: none;
+  font-weight: 500;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 }
 
@@ -55,29 +62,31 @@ form input, form, .big-letter, .registered-name {
 
 body {
   width: 100vw;
+  min-width: 375px;
+  background-color: #f7f7f7;
 }
 
 main {
-  padding-top: 20%;
+  padding-top: 85px;
 }
 
 .panel--nav {
   width: 100%;
-  height: 70px;
+  height: 85px;
   position: fixed;
-  border: 0.1rem solid #000000;
-  background-color: #ffffff;
+  /* border: 0.1rem solid $color-black */
+  background-color: #f7f7f7;
   z-index: 4;
 }
 
 .logo {
   width: 100%;
-  letter-spacing: 0.3rem;
+  letter-spacing: 0.2rem;
   text-align: center;
   text-justify: center;
   position: absolute;
-  font-size: 1.8rem;
-  top: 10px;
+  font-size: 2.2rem;
+  top: 17px;
   text-decoration: none;
   font-weight: 500;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
@@ -87,78 +96,62 @@ main {
   display: flex;
   width: 70px;
   position: absolute;
-  right: 5px;
-  top: 20px;
+  right: 0px;
+  top: 10px;
+  z-index: 50;
 }
 .icons-header ul {
   overflow: auto;
   align-items: right;
   list-style-type: none;
+  right: 10px;
+  margin: 5px;
 }
 .icons-header li {
   height: 25px;
   list-style-type: none;
   text-decoration: none;
   padding: 0;
-  margin: 1px 5px;
+  margin: 20px 2px;
 }
 .icons-header li,
-.icons-header a {
+.icons-header a,
+.icons-header img {
   text-decoration: none;
-  margin: 1px 5px;
+  width: 55%;
   font-size: 1.2rem;
   color: #000000;
   text-transform: uppercase;
   -webkit-transition: all 0.5s ease;
 }
 .icons-header li:hover,
-.icons-header a:hover {
+.icons-header a:hover,
+.icons-header img:hover {
   color: #00ffa6;
 }
+.icons-header img {
+  margin: 12px 2px;
+}
 
-.panel--foot {
+.search-bar {
   width: 100%;
-  height: 60px;
-  display: flex;
-  position: fixed;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  bottom: 45px;
-  border-top: 0.01rem solid #00ffa6;
-  border-bottom: 0.01rem solid #00ffa6;
+  line-height: 30px;
+  border: none;
+  margin: 0px auto;
+  vertical-align: middle;
 }
-.panel--foot ul {
-  overflow: auto;
-  list-style-type: none;
+.search-bar input,
+.search-bar textarea {
+  padding: 6px;
+  transition-property: background, border, color;
+  transition-duration: 0.15s;
 }
-.panel--foot li {
-  height: 25px;
-  list-style-type: none;
-  text-decoration: none;
-  float: left;
-  padding: 0;
-}
-.panel--foot li,
-.panel--foot a {
-  text-decoration: none;
-  font-size: 1rem;
-  margin: 1px auto;
+.search-bar input:focus, .search-bar inputtextarea:focus,
+.search-bar textarea:focus,
+.search-bar textareatextarea:focus {
+  outline-color: #00ffa6;
   color: #000000;
-  text-transform: uppercase;
-  -webkit-transition: all 0.5s ease;
-}
-.panel--foot li:hover,
-.panel--foot a:hover {
-  color: #c6c6c6;
-}
-
-.registered-name {
-  width: 100%;
-  margin: 15px auto;
-  position: fixed;
-  text-align: center;
-  bottom: 0;
+  background-color: #f7f7f7;
 }
 
 .close {
@@ -188,6 +181,101 @@ main {
 }
 .close:after {
   transform: rotate(-45deg);
+}
+
+.menuToggle {
+  z-index: 5;
+  display: block;
+  position: relative;
+  top: 32px;
+  left: 23px;
+  -webkit-user-select: none;
+  user-select: none;
+}
+.menuToggle a {
+  text-decoration: none;
+  color: #000000;
+  transition: color 0.3s ease;
+  line-height: 40px;
+  font-weight: 500;
+  padding-left: 45px;
+}
+
+.menuToggle input {
+  display: block;
+  width: 30px;
+  height: 22px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 6;
+  -webkit-touch-callout: none;
+}
+
+.menuToggle span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #000000;
+  border-radius: 1px;
+  z-index: 5;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+}
+
+.menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+.menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+.menuToggle input:checked ~ span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #000000;
+}
+
+.menuToggle input:checked ~ span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.menuToggle input:checked ~ span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+.menu {
+  position: absolute;
+  width: 200px;
+  margin: 0px 0 0 -50px;
+  padding-left: 0;
+  top: 45px;
+  padding-top: 0px;
+  background: #f7f7f7;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+}
+
+.menu li {
+  padding: 0;
+  font-size: 22px;
+  transition: all 250ms cubic-bezier(0.675, 0.42, 0.09, 0.87);
+}
+.menu li:hover {
+  background-color: #00ffa6;
+}
+
+.menuToggle input:checked ~ ul {
+  transform: none;
 }
 
 .big-letter {
@@ -230,7 +318,7 @@ form textarea:focus,
 form textareatextarea:focus {
   outline-color: #00ffa6;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 
 .button {
@@ -239,7 +327,7 @@ form textareatextarea:focus {
   margin: 10px;
   text-align: center;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
   border: 0.05rem solid #000000;
   appearance: none;
   cursor: pointer;
@@ -247,7 +335,7 @@ form textareatextarea:focus {
 }
 .button:not([disabled]):hover, .button:not([disabled]):focus {
   color: #00ffa6;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 .button:focus {
   outline: none;
@@ -257,8 +345,85 @@ form textareatextarea:focus {
   cursor: not-allowed;
 }
 
-main {
-  padding-top: 15vh;
+.container_image {
+  width: 95%;
+  display: flex;
+  align-items: center;
+  margin: 10px auto;
+  position: relative;
+  text-align: center;
+}
+.container_image img {
+  width: 100%;
+  position: relative;
+  margin: 0 auto;
+}
+.container_image p {
+  color: #f7f7f7;
+  letter-spacing: 0.2em;
+  position: absolute;
+  align-items: center;
+  width: 100%;
+  bottom: 70px;
+}
+.container_image .title_collection {
+  font-size: 1.6em;
+  color: #f7f7f7;
+  font-weight: 800;
+  position: absolute;
+  align-items: center;
+  width: 100%;
+  bottom: 30px;
+}
+
+.panel--foot {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  bottom: 10px;
+}
+.panel--foot ul {
+  overflow: auto;
+  width: 100%;
+  list-style-type: none;
+  bottom: 30px;
+  padding: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  border-top: 0.01rem solid #00ffa6;
+  border-bottom: 0.01rem solid #00ffa6;
+}
+.panel--foot li {
+  height: 25px;
+  list-style-type: none;
+  text-decoration: none;
+  margin: 30px 30px;
+}
+.panel--foot li,
+.panel--foot a,
+.panel--foot i {
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin: 1px auto;
+  color: #000000;
+  text-transform: uppercase;
+  -webkit-transition: all 0.5s ease;
+}
+.panel--foot li:hover,
+.panel--foot a:hover,
+.panel--foot i:hover {
+  color: #c6c6c6;
+}
+
+.registered-name {
+  width: 100%;
+  margin: 15px auto;
+  text-align: center;
+  bottom: 5px;
 }
 
 /*# sourceMappingURL=index.css.map */
